--- a/app/globals.css
+++ b/app/globals.css
@@ -72,10 +72,25 @@
   }
 
   html,
-  body,
-  main {
+  body {
     height: 100%;
     margin: 0;
+  }
+
+  body {
+    display: flex;
+    flex-direction: column;
+  }
+
+  main {
+    flex: 1;
+  }
+
+  footer {
+    width: 100%;
+    display: flex;
+    position: fixed;
+    bottom: 0;
   }
 
   body {
